removed dark mode back button issue

--- a/Documents/Markham Robotics/robotics-website/styles/globals.css
+++ b/Documents/Markham Robotics/robotics-website/styles/globals.css
@@ -15,19 +15,30 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    box-sizing: border-box;
   }
   body {
     color: white;
-    background: black;
+    background: #D9D9D9;
   }
-}
 
 html::-webkit-scrollbar {
   display: none;               /* width of the entire scrollbar */
+  -webkit-overflow-scrolling: auto;
+  -webkit-appearance: none;
+    width: 0;
+    height: 0;
+    scrollbar-width: none;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 body::-webkit-scrollbar {
   display: none;               /* width of the entire scrollbar */
+  -webkit-overflow-scrolling: auto;
+  -webkit-appearance: none;
+    width: 0;
+    height: 0;
+    scrollbar-width: none;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
